--- a/themes/terra/style.css
+++ b/themes/terra/style.css
@@ -417,8 +417,7 @@ h2 {
     h2 {
       font-size: 2.625rem; } }
 
-.page-the-project,
-.home {
+body {
   overflow-x: hidden; }
 
 .banner-container {
@@ -1287,6 +1286,10 @@ object {
             margin-right: 0.5rem;
             margin-left: 0.5rem; } }
 
+@media (max-width: 620px) {
+  .page {
+    overflow-x: hidden; } }
+
 .site-header {
   position: fixed;
   background-color: rgba(255, 255, 255, 0.8);
@@ -1298,6 +1301,8 @@ object {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    overflow-x: hidden;
+    max-width: 100vw;
     width: inherit;
     height: 60px;
     /* hamburger starts */
@@ -1342,8 +1347,8 @@ object {
           flex-wrap: wrap;
       justify-items: flex-end;
       width: auto;
-      margin-left: auto;
-      position: relative; }
+      position: relative;
+      margin-left: auto; }
       .site-header .center-header .main-navigation button,
       .site-header .center-header .main-navigation button:focus,
       .site-header .center-header .main-navigation button:hover {
@@ -1505,7 +1510,9 @@ object {
         height: auto;
         -webkit-box-pack: justify;
             -ms-flex-pack: justify;
-                justify-content: space-between; }
+                justify-content: space-between;
+        -webkit-transition: all 1s ease-in-out;
+        transition: all 1s ease-in-out; }
         .testimony-entries .fp-testimony:hover {
           -ms-flex-pack: distribute;
               justify-content: space-around;
